--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
