--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
     "redux": "^3.7.2",
+    "redux-form": "^5.4.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
   },
