--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.4",
+    "react-image-gallery": "^0.8.15",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.8",
